# TIDMAD_denoising

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: download_data.py  evaluate.py  train.py
tests/: test_data.py  test_lightning.py  test_metrics.py  test_model.py
tidmad_denoiser/: __init__.py  _compat.py  data.py  lightning.py  metrics.py  model.py
